<resources>
    <string name="app_name">My Property Animations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_of_property_animation_topics">List of Property Animation Topics</string>
    <string name="valueanimator">ValueAnimator</string>
    <string name="objectanimator">ObjectAnimator</string>
    <string name="viewpropertyanimator">ViewPropertyAnimator</string>
    <string name="animate_rectangle">Animate Rectangle</string>
    <string name="aniamte_multiple_views">Animate Multiple Views</string>
    <string name="animatorset">AnimatorSet</string>
    <string name="animator_sets">Animator Sets</string>
    <string name="animate_view">Animate View</string>
    <string name="animate_value">Animate Value</string>
    <string name="animate_custom_type">Animate Custom Type</string>
    <string name="animate_custom_types">Animate Custom Types</string>
    <string name="click_the_picture_to_animate">Click the picture to animate</string>
    <string name="animator_resources">Animator Resources</string>
    <string name="animate_with_resources">Animate with Resources</string>
</resources>