<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/topics"
        android:gravity="start"
        android:layout_gravity="center"
        android:orientation="vertical"

        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:id="@+id/title"
        android:text="@string/list_of_property_animation_topics" />


        <com.google.android.material.button.MaterialButton

            android:id="@+id/value_animator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valueanimator"
            android:textAllCaps="false"
            android:layout_margin="16dp"

            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/object_animator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/objectanimator"
            android:textAllCaps="false"
            android:layout_margin="16dp"

            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/view_property_animator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewpropertyanimator"
            android:layout_margin="16dp"
            android:textAllCaps="false"
            />



    </LinearLayout>




</FrameLayout>